# internal/provider/group_resource.go
@@ -68,6 +68,7 @@ type GroupResourceModel struct {
 	RemoteName                types.String                                `tfsdk:"remote_name"`
 	RequestConfigurations     []tfTypes.RequestConfiguration              `tfsdk:"request_configurations"`
 	RequireMfaToApprove       types.Bool                                  `tfsdk:"require_mfa_to_approve"`
+	RiskSensitivity           *tfTypes.RiskSensitivity                    `tfsdk:"risk_sensitivity"`
 	Visibility                types.String                                `tfsdk:"visibility"`
 	VisibilityGroupIds        []types.String                              `tfsdk:"visibility_group_ids"`
 }
@@ -697,6 +698,41 @@ func (r *GroupResource) Schema(ctx context.Context, req resource.SchemaRequest, 
 				Computed:    true,
 				Optional:    true,
 				Description: `A bool representing whether or not to require MFA for reviewers to approve requests for this group.`,
+			},
+			"risk_sensitivity": schema.SingleNestedAttribute{
+				Computed: true,
+				Optional: true,
+				Attributes: map[string]schema.Attribute{
+					"calculated_value": schema.StringAttribute{
+						Computed:    true,
+						Optional:    true,
+						Description: `must be one of ["CRITICAL", "HIGH", "MEDIUM", "LOW", "NONE"]`,
+						Validators: []validator.String{
+							stringvalidator.OneOf(
+								"CRITICAL",
+								"HIGH",
+								"MEDIUM",
+								"LOW",
+								"NONE",
+							),
+						},
+					},
+					"override_value": schema.StringAttribute{
+						Computed:    true,
+						Optional:    true,
+						Description: `must be one of ["CRITICAL", "HIGH", "MEDIUM", "LOW", "NONE"]`,
+						Validators: []validator.String{
+							stringvalidator.OneOf(
+								"CRITICAL",
+								"HIGH",
+								"MEDIUM",
+								"LOW",
+								"NONE",
+							),
+						},
+					},
+				},
+				Description: `Indicates the level of potential impact misuse or unauthorized access may incur.`,
 			},
 			"visibility": schema.StringAttribute{
 				Required:    true,
