# internal/provider/types/group.go
@@ -18,4 +18,5 @@ type Group struct {
 	RemoteName                types.String           `tfsdk:"remote_name"`
 	RequestConfigurations     []RequestConfiguration `tfsdk:"request_configurations"`
 	RequireMfaToApprove       types.Bool             `tfsdk:"require_mfa_to_approve"`
+	RiskSensitivity           *RiskSensitivity       `tfsdk:"risk_sensitivity"`
 }
