# internal/provider/types/risk_sensitivity.go
@@ -1,0 +1,10 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package types
+
+import "github.com/hashicorp/terraform-plugin-framework/types"
+
+type RiskSensitivity struct {
+	CalculatedValue types.String `tfsdk:"calculated_value"`
+	OverrideValue   types.String `tfsdk:"override_value"`
+}
